Some update I guess, never pushed this stuff
Signed-off-by: Jake Nijssen <jtmnijssen@outlook.com>